// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> spec renders the component 1`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-1 diagonalKoros"
  >
    <div
      class="diagonalKorosWithBackgroundContainer"
    >
      <div
        class="content"
      >
        <div
          class="contentColums"
        >
          <div
            class="card"
          >
            <h1>
              This is the heading
            </h1>
            <p>
              Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
            </p>
            <button
              class="button secondary theme-bus size-medium"
              role="link"
              type="button"
            >
              <span>
                Click me
              </span>
            </button>
          </div>
          <div
            class="emptyColumn"
          />
        </div>
      </div>
      <div
        class="korosAligner"
      >
        <div
          class="diagonalKorosAndBackground"
        >
          <div
            class="korosContainer"
          >
            <div
              class="koros basic"
              style="fill: var(--koros-color);"
            >
              <svg
                aria-hidden="true"
                height="85"
                width="100%"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <pattern
                    height="85"
                    id="koros_basic-2"
                    patternUnits="userSpaceOnUse"
                    width="96"
                    x="0"
                    y="0"
                  >
                    <path
                      d="m0 5v80h32v-80c-8 0-8-5-16-5s-8 5-16 5z"
                      transform="scale(3)"
                    />
                  </pattern>
                </defs>
                <rect
                  fill="url(#koros_basic-2)"
                  height="85"
                  style="shape-rendering: crispEdges;"
                  width="100%"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="withBackgroundBackground diagonalKorosBackgroundContainer"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bottomContainer"
    >
      <div
        class="bottomContentAligner"
      >
        <div
          class="arrowIconContainer"
        >
          <svg
            aria-hidden="true"
            aria-label="arrow-down"
            class="icon small arrowIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.5 4V16.4995L17.5 12.5L19 14L12.5 20.5L6 14L7.5 12.5L11.5 16.5V4H13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="informationContainer"
        >
          <span>
            Test info
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 2`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-3 backgroundImage"
  >
    <div
      class="withBackgroundContainer"
    >
      <div
        class="withBackgroundBackground"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
        <div
          class="backgroundImageKoros"
        >
          <div
            class="koros basic"
            style="fill: var(--koros-color);"
          >
            <svg
              aria-hidden="true"
              height="85"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <pattern
                  height="85"
                  id="koros_basic-4"
                  patternUnits="userSpaceOnUse"
                  width="96"
                  x="0"
                  y="0"
                >
                  <path
                    d="m0 5v80h32v-80c-8 0-8-5-16-5s-8 5-16 5z"
                    transform="scale(3)"
                  />
                </pattern>
              </defs>
              <rect
                fill="url(#koros_basic-4)"
                height="85"
                style="shape-rendering: crispEdges;"
                width="100%"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-bus size-medium"
            role="link"
            type="button"
          >
            <span>
              Click me
            </span>
          </button>
        </div>
        <div
          class="emptyColumn"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bottomContainer"
    >
      <div
        class="bottomContentAligner"
      >
        <div
          class="arrowIconContainer"
        >
          <svg
            aria-hidden="true"
            aria-label="arrow-down"
            class="icon small arrowIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.5 4V16.4995L17.5 12.5L19 14L12.5 20.5L6 14L7.5 12.5L11.5 16.5V4H13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="informationContainer"
        >
          <span>
            Test info
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 3`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-5 imageLeft"
  >
    <div
      class="container"
    >
      <div
        class="content twoColumns"
      >
        <div
          class="twoColumnsImageContainer"
        >
          <img
            alt=""
            aria-hidden="true"
            class="image"
            src="http://image.com/image.jpg"
          />
        </div>
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-bus size-medium"
            role="link"
            type="button"
          >
            <span>
              Click me
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="korosAndImageContainer"
    >
      <div
        class="korosContainer"
      >
        <div
          class="koros basic"
          style="fill: var(--koros-color); transform: scaleY(-1);"
        >
          <svg
            aria-hidden="true"
            height="85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <pattern
                height="85"
                id="koros_basic-6"
                patternUnits="userSpaceOnUse"
                width="96"
                x="0"
                y="0"
              >
                <path
                  d="m0 5v80h32v-80c-8 0-8-5-16-5s-8 5-16 5z"
                  transform="scale(3)"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#koros_basic-6)"
              height="85"
              style="shape-rendering: crispEdges;"
              width="100%"
            />
          </svg>
        </div>
      </div>
      <div
        class="imageBelowKoros"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bottomContainer"
    >
      <div
        class="bottomContentAligner"
      >
        <div
          class="arrowIconContainer"
        >
          <svg
            aria-hidden="true"
            aria-label="arrow-down"
            class="icon small arrowIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.5 4V16.4995L17.5 12.5L19 14L12.5 20.5L6 14L7.5 12.5L11.5 16.5V4H13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="informationContainer"
        >
          <span>
            Test info
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 4`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-7 imageRight"
  >
    <div
      class="container"
    >
      <div
        class="content twoColumns"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-bus size-medium"
            role="link"
            type="button"
          >
            <span>
              Click me
            </span>
          </button>
        </div>
        <div
          class="twoColumnsImageContainer"
        >
          <img
            alt=""
            aria-hidden="true"
            class="image"
            src="http://image.com/image.jpg"
          />
        </div>
      </div>
    </div>
    <div
      class="korosAndImageContainer"
    >
      <div
        class="korosContainer"
      >
        <div
          class="koros basic"
          style="fill: var(--koros-color); transform: scaleY(-1);"
        >
          <svg
            aria-hidden="true"
            height="85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <pattern
                height="85"
                id="koros_basic-8"
                patternUnits="userSpaceOnUse"
                width="96"
                x="0"
                y="0"
              >
                <path
                  d="m0 5v80h32v-80c-8 0-8-5-16-5s-8 5-16 5z"
                  transform="scale(3)"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#koros_basic-8)"
              height="85"
              style="shape-rendering: crispEdges;"
              width="100%"
            />
          </svg>
        </div>
      </div>
      <div
        class="imageBelowKoros"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bottomContainer"
    >
      <div
        class="bottomContentAligner"
      >
        <div
          class="arrowIconContainer"
        >
          <svg
            aria-hidden="true"
            aria-label="arrow-down"
            class="icon small arrowIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.5 4V16.4995L17.5 12.5L19 14L12.5 20.5L6 14L7.5 12.5L11.5 16.5V4H13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="informationContainer"
        >
          <span>
            Test info
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 5`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-9 noImage"
  >
    <div
      class="container"
    >
      <div
        class="content singleColumn"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-bus size-medium"
            role="link"
            type="button"
          >
            <span>
              Click me
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="korosAndImageContainer"
    >
      <div
        class="korosContainerInwardKoros"
      >
        <div
          class="koros basic"
          style="fill: var(--koros-color);"
        >
          <svg
            aria-hidden="true"
            height="85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <pattern
                height="85"
                id="koros_basic-10"
                patternUnits="userSpaceOnUse"
                width="96"
                x="0"
                y="0"
              >
                <path
                  d="m0 5v80h32v-80c-8 0-8-5-16-5s-8 5-16 5z"
                  transform="scale(3)"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#koros_basic-10)"
              height="85"
              style="shape-rendering: crispEdges;"
              width="100%"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bottomContainer"
    >
      <div
        class="bottomContentAligner"
      >
        <div
          class="arrowIconContainer"
        >
          <svg
            aria-hidden="true"
            aria-label="arrow-down"
            class="icon small arrowIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.5 4V16.4995L17.5 12.5L19 14L12.5 20.5L6 14L7.5 12.5L11.5 16.5V4H13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="informationContainer"
        >
          <span>
            Test info
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Hero /> spec renders the component 6`] = `
<DocumentFragment>
  <div
    class="hero custom-theme-11 imageBottom"
  >
    <div
      class="container"
    >
      <div
        class="content singleColumn"
      >
        <div
          class="card"
        >
          <h1>
            This is the heading
          </h1>
          <p>
            Nullam ut nunc consectetur, accumsan nunc sed, luctus nisl. Curabitur lacinia!
          </p>
          <button
            class="button secondary theme-bus size-medium"
            role="link"
            type="button"
          >
            <span>
              Click me
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="korosAndImageContainer"
    >
      <div
        class="korosContainer"
      >
        <div
          class="koros basic"
          style="fill: var(--koros-color); transform: scaleY(-1);"
        >
          <svg
            aria-hidden="true"
            height="85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <pattern
                height="85"
                id="koros_basic-12"
                patternUnits="userSpaceOnUse"
                width="96"
                x="0"
                y="0"
              >
                <path
                  d="m0 5v80h32v-80c-8 0-8-5-16-5s-8 5-16 5z"
                  transform="scale(3)"
                />
              </pattern>
            </defs>
            <rect
              fill="url(#koros_basic-12)"
              height="85"
              style="shape-rendering: crispEdges;"
              width="100%"
            />
          </svg>
        </div>
      </div>
      <div
        class="imageBelowKoros"
      >
        <img
          alt=""
          aria-hidden="true"
          class="image"
          src="http://image.com/image.jpg"
        />
      </div>
    </div>
    <div
      aria-hidden="true"
      class="bottomContainer"
    >
      <div
        class="bottomContentAligner"
      >
        <div
          class="arrowIconContainer"
        >
          <svg
            aria-hidden="true"
            aria-label="arrow-down"
            class="icon small arrowIcon"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M13.5 4V16.4995L17.5 12.5L19 14L12.5 20.5L6 14L7.5 12.5L11.5 16.5V4H13.5Z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="informationContainer"
        >
          <span>
            Test info
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
